# SeenLang

./: .gitattributes  .gitignore  .seen_ml_heuristics  ACTUAL_IMPLEMENTATION_STATUS.md  AGENTS.md  BENCHMARK_RESULTS.md  BENCHMARK_STATUS.md  BOOTSTRAP_BLOCKER_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CRITICAL_TYPECHECKER_FIX_NEEDED.md  Cargo.toml  Dockerfile  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_STATUS.md  LICENSE  LLVM_BACKEND_PRODUCTION_STATUS.md  LlvmTraceOptions  MVP_ACCURATE_STATUS.md  MVP_IMPLEMENTATION_STATUS.md  MVP_PLAN_UPDATE_SUMMARY.md  MVP_PROGRESS_2025-01-13.md  MVP_PROGRESS_2025-01-13_FINAL.md  NEXT_STEPS.md  PHASE2_COMPLETION_SUMMARY.md  QUICKSTART_NEXT_SESSION.md  README.md  RUST_MIGRATION_COMPLETE.md  RUST_REMOVAL_LOG.md  RUST_REMOVAL_READINESS.md  RUST_REMOVAL_TASK_LIST.md  SELF_HOSTED_STATUS.md  SELF_HOSTING_STATUS_REPORT.md  SESSION_SUMMARY_2025-11-14.md  SESSION_SUMMARY_TYPECHECKER_FIX.md  Seen.toml  TDD_INFRASTRUCTURE.md  TEDDY.md  TYPECHECKER_DEEP_FIXUP_IMPLEMENTATION.md  TYPECHECKER_FIX_QUICKREF.md  (+552 more)
benchmarks/rust_production/: Cargo.toml  run_all.sh
compiler_bootstrap/seen_cli/: Cargo.toml
compiler_bootstrap/seen_cli/benches/: build_system_benchmark.rs
compiler_bootstrap/seen_cli/src/: config.rs  lib.rs  main.rs  project.rs  utils.rs
compiler_bootstrap/seen_cli/tests/: cli_integration_test.rs
compiler_bootstrap/seen_common/: Cargo.toml
compiler_bootstrap/seen_common/benches/: phase2_benchmarks.rs
compiler_bootstrap/seen_common/src/: diagnostics.rs  error.rs  lib.rs  span.rs
compiler_bootstrap/seen_common/tests/: integration_test.rs
compiler_bootstrap/seen_ffi/: Cargo.toml
compiler_bootstrap/seen_ffi/src/: binding_generator.rs  dynamic_loader.rs  header_parser.rs  lib.rs  type_mapping.rs
compiler_bootstrap/seen_ffi/tests/: c_interop_test.rs  integration_test.rs
compiler_bootstrap/seen_interpreter/: Cargo.toml
compiler_bootstrap/seen_ir/: Cargo.toml
compiler_bootstrap/seen_lexer/: Cargo.toml
compiler_bootstrap/seen_memory/: Cargo.toml
compiler_bootstrap/seen_parser/: Cargo.toml
compiler_bootstrap/seen_typechecker/: Cargo.toml
rust_backup/seen_effects/: Cargo.toml
rust_backup/seen_oop/: Cargo.toml
rust_backup/seen_reactive/: Cargo.toml
rust_backup/seen_tooling/: Cargo.toml
seen_cli/: Cargo.toml  build.rs
seen_cli/src/: build.rs  config.rs  main.rs  project.rs  run.rs
seen_cli/tests/: abort.rs  android_bundle.rs  bootstrap_frontend.rs  channel_select.rs  clif_backend.rs  cross_targets.rs  embed_determinism.rs  format.rs  hardware_flags.rs  linux_sample.rs  manifest_modules.rs  mlir_backend.rs  pkg.rs  post_examples.rs  shaders.rs  simd_report.rs  trace.rs  wasm_loader.rs
seen_compiler/: Cargo.toml
seen_concurrency/: Cargo.toml
seen_concurrency/src/: actors.rs  async_functions.rs  async_runtime.rs  channels.rs  lib.rs  select.rs  types.rs
seen_core/: Cargo.toml
seen_core/src/: lib.rs
seen_interpreter/: Cargo.toml
seen_interpreter/src/: actor_executor.rs  builtins.rs  errors.rs  interpreter.rs  lib.rs  runtime.rs  trace.rs  value.rs
seen_interpreter/tests/: defer_tests.rs  integration_test.rs  parallel_tests.rs  reactive_integration_test.rs
seen_ir/: Cargo.toml
seen_ir/benches/: ir_benchmark.rs
seen_ir/src/: arena.rs  cfg_builder.rs  codegen.rs  codegen.rs.backup  error.rs  function.rs  generator.rs  instruction.rs  lib.rs  llvm_backend.rs  llvm_codegen.rs  llvm_mapping.rs  llvm_types.rs  mapping.rs  module.rs  optimizer.rs  simple_codegen.rs  types.rs  value.rs
seen_ir/tests/: codegen_tests_spec.md  ir_integration_test.rs
seen_lexer/: Cargo.toml
seen_lexer/benches/: lexer_benchmark.rs
seen_lexer/languages/: ar.toml  en.toml  english.toml  keywords.toml
seen_lexer/src/: error.rs  keyword_config.rs  keyword_manager.rs  lexer.rs  lib.rs  position.rs  project_config.rs  token.rs
seen_lexer/tests/: lexer_integration_test.rs  lexer_tests_spec.md
seen_lsp/: Cargo.toml
seen_lsp/src/: lib.rs
seen_lsp/tests/: lsp_integration_test.rs
seen_memory_manager/: Cargo.toml
seen_memory_manager/benches/: hybrid_handles.rs
seen_memory_manager/src/: lib.rs  memory_manager.rs  ownership.rs  regions.rs  topology.rs
seen_parser/: Cargo.toml
seen_parser/benches/: parser_benchmark.rs
seen_parser/src/: ast.rs  error.rs  lib.rs  parser.rs  position.rs
seen_parser/tests/: comprehensive_parser_spec.md  parser_integration_test.rs  parser_tests_spec.md  struct_tests_spec.md
seen_reactive/: Cargo.toml
seen_reactive/src/: flow.rs  lib.rs  observable.rs  properties.rs
seen_self_hosting/: Cargo.toml
seen_self_hosting/src/: lib.rs
seen_std/: Cargo.toml  README.md  Seen.toml
seen_std/benches/: collections_benchmark.rs  graph_benchmark.rs  io_benchmark.rs  json_benchmark.rs  pretty_benchmark.rs  primitives_benchmark.rs  regex_benchmark.rs  string_benchmark.rs  toml_benchmark.rs
seen_std/collections/: Cargo.toml
seen_std/core/: Cargo.toml
seen_std/io/: Cargo.toml
seen_std/src/: error.rs  lib.rs  mod.seen
seen_std/tests/: algorithms_basic.seen  bit_set_basic.seen  btree_map_basic.seen  buffered_basic.seen  byte_buffer_basic.seen  collections_test.rs  env_basic.seen  fs_path_basic.seen  hash_map_basic.seen  hash_set_basic.seen  io_file_basic.seen  json_builder_basic.seen  map_basic.seen  math_basic.seen  minimal_bootstrap.seen  platform_linux_audio.seen  platform_linux_constants.seen  platform_linux_evdev.seen  platform_linux_sdl3.seen  platform_linux_steam.seen  platform_linux_vulkan.seen  primitives_test.rs  process_basic.seen  run_platform_linux_tests.sh  simd_basic.seen  std_string_basic.seen  str_basic.seen  string_buffer_basic.seen  string_hash_map_basic.seen  string_test.rs  time_basic.seen  vec_basic.seen  vecdeque_basic.seen
seen_tooling/: Cargo.toml
seen_tooling/src/: lib.rs
seen_typechecker/: Cargo.toml
seen_typechecker/src/: checker.rs  checker.rs.broken  errors.rs  inference.rs  lib.rs  smart_cast.rs  types.rs
seen_typechecker/tests/: class_support.rs  integration_smart_casting.rs  parser_hardening.rs  smart_casting_focused.rs  type_system_spec.md
(+2865 files in other folders)
