[workspace]
resolver = "2"
members = [
    "seen_cli",
    "seen_lexer",
    "seen_parser", 
    "seen_typechecker",
    "seen_interpreter",
    "seen_ir",
    "seen_lsp",
    "seen_memory_manager",
    "seen_oop",
    "seen_concurrency",
    "seen_reactive",
    "seen_effects",
    "seen_advanced",
    "seen_tooling",
    "seen_self_hosting"
]

[workspace.dependencies]
# Testing framework dependencies
proptest = "1.7.0"
pretty_assertions = "1.4.1"
test-case = "3.3.1"
rstest = "0.23.0"
tempfile = "3.10.1"
insta = "1.43.1"
assert_cmd = "2.0"
predicates = "3.1"

# Coverage and benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }

# Async testing
tokio-test = "0.4.4"
futures-test = "0.3.31"

# Mock and stub utilities
mockall = "0.13.1"
wiremock = "0.6.2"

# Common dependencies
anyhow = "1.0.98"
thiserror = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.2"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.43", features = ["derive"] }
colored = "2.2.0"

# Language implementation dependencies
chumsky = "0.10.1"
lasso = "0.7.3"
indexmap = { version = "2.10.0", features = ["serde"] }
hashbrown = "0.15.5"

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1