[package]
name = "seen_cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for the Seen programming language"

[dependencies]
# Seen language components
seen_lexer = { path = "../seen_lexer" }
seen_parser = { path = "../seen_parser" }
seen_typechecker = { path = "../seen_typechecker" }
seen_interpreter = { path = "../seen_interpreter" }
seen_ir = { path = "../seen_ir" }
seen_lsp = { path = "../seen_lsp" }

# For CLI argument parsing
clap = { workspace = true }

# For error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# For logging
env_logger = { workspace = true }
log = { workspace = true }

# For file operations
tempfile = { workspace = true }

# For project configuration
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# For terminal coloring
colored = { workspace = true }

# For async runtime (needed for LSP)
tokio = { version = "1", features = ["rt", "macros"] }
[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
