[package]
name = "seen_cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for the Seen programming language"

[dependencies]
# Core Seen components
seen_core = { path = "../seen_core" }
seen_mlir = { path = "../seen_mlir" }
seen_cranelift = { path = "../seen_cranelift" }

# For CLI argument parsing
clap = { workspace = true }

# For logging
env_logger = { workspace = true }
log = { workspace = true }

# For file operations
tempfile = { workspace = true }

# For project configuration
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# For terminal coloring
colored = { workspace = true }

# Bundling utilities
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Hashing for determinism checks
sha2 = "0.10"

# For async runtime (needed for LSP)
tokio = { version = "1", features = ["rt", "macros"] }
[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[features]
default = []
# Propagate LLVM backend toggle into seen_ir
llvm = ["seen_core/llvm"]
