[package]
name = "seen_concurrency"
version = "0.1.0"
edition = "2021"
description = "Concurrency and async features for Seen"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
seen_lexer = { path = "../seen_lexer" }
seen_parser = { path = "../seen_parser" }
rand = "0.8"
rayon = "1.7"

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
