[package]
name = "seen_core"
version = "0.1.0"
edition = "2021"
description = "Core compiler facade for the Seen language"

[dependencies]
seen_support = { path = "../seen_support" }
seen_lexer = { path = "../seen_lexer" }
seen_parser = { path = "../seen_parser" }
seen_typechecker = { path = "../seen_typechecker" }
seen_ir = { path = "../seen_ir", default-features = false }
seen_interpreter = { path = "../seen_interpreter" }
seen_lsp = { path = "../seen_lsp" }
seen_memory_manager = { path = "../seen_memory_manager" }

[features]
default = []
llvm = ["seen_ir/llvm"]
