[package]
name = "seen_interpreter"
version = "0.1.0"
edition = "2021"
description = "Tree-walking interpreter for the Seen programming language"

[dependencies]
# Local dependencies
seen_parser = { path = "../seen_parser" }
seen_lexer = { path = "../seen_lexer" }
seen_typechecker = { path = "../seen_typechecker" }

# External dependencies  
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }