[package]
name = "seen_ir"
version = "0.1.0"
edition = "2021"
description = "Intermediate representation for the Seen programming language"

[features]
default = []
llvm = ["dep:inkwell"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
seen_parser = { path = "../seen_parser" }
inkwell = { version = "0.2", optional = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
