[package]
name = "seen_lexer"
version = "0.1.0"
edition = "2021"
description = "Lexical analyzer for the Seen programming language"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
lasso = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
hashbrown = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
regex = "1.10"

[[bin]]
name = "lexer_test_runner"
path = "src/bin/test_runner.rs"
required-features = []