[package]
name = "seen_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
seen_lexer = { path = "../seen_lexer" } # Parser needs tokens from lexer
# For error handling
thiserror = "2.0.12"
chumsky = "0.10.1"
# For serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
