[package]
name = "seen_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
seen_lexer = { path = "../seen_lexer" } # Parser needs tokens from lexer
# For error handling
thiserror = { workspace = true }
chumsky = "0.10.1"
# For serialization/deserialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
