[package]
name = "seen_parser"
version = "0.1.0"
edition = "2021"
description = "Parser for the Seen programming language"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }
hashbrown = { workspace = true }
env_logger = { workspace = true }

# Seen language components
seen_lexer = { path = "../seen_lexer" }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "parser_test_runner"
path = "src/bin/test_runner.rs"
required-features = []