[package]
name = "seen_reactive"
version = "0.1.0"
edition = "2021"
description = "Reactive programming features for Seen"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }