[package]
name = "seen_self_hosting"
version = "0.1.0"
edition = "2021"
description = "Self-hosting capability for Seen compiler"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }