[package]
name = "seen_tooling"
version = "0.1.0"
edition = "2021"
description = "Tooling ecosystem (LSP, VS Code extension support) for Seen"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }