[package]
name = "seen_cli"
version = "0.1.0"
edition = "2021"
authors = ["Seen Language Team"]
description = "Command-line interface for the Seen programming language compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seenlang/seenlang"

[[bin]]
name = "seen"
path = "src/main.rs"

[dependencies]
seen_common = { path = "../seen_common" }
seen_lexer = { path = "../seen_lexer" }
seen_parser = { path = "../seen_parser" }
seen_typechecker = { path = "../seen_typechecker" }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
pathdiff = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }