[package]
name = "seen_cli"
version = "0.1.0"
edition = "2021"
authors = ["Seen Language Team"]
description = "Command-line interface for the Seen programming language compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seenlang/seenlang"

[[bin]]
name = "seen"
path = "src/main.rs"

[dependencies]
seen_common = { path = "../seen_common" }
seen_lexer = { path = "../seen_lexer" }
seen_parser = { path = "../seen_parser" }
seen_typechecker = { path = "../seen_typechecker" }
seen_memory = { path = "../seen_memory" }
seen_ir = { path = "../seen_ir" }
seen_process = { path = "../seen_process" }
seen_std = { path = "../../seen_std" }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
pathdiff = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "build_system_benchmark"
harness = false