[package]
name = "seen_common"
version = "0.1.0"
edition = "2021"
authors = ["Seen Language Team"]
description = "Shared utilities and error types for the Seen language compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seenlang/seenlang"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
seen_lexer = { path = "../seen_lexer" }
seen_parser = { path = "../seen_parser" }
seen_typechecker = { path = "../seen_typechecker" }
seen_memory = { path = "../seen_memory" }
seen_ir = { path = "../seen_ir" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "phase2_benchmarks"
harness = false