[package]
name = "seen_interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
seen_common = { path = "../seen_common" }
seen_lexer = { path = "../seen_lexer" }
seen_parser = { path = "../seen_parser" }
seen_typechecker = { path = "../seen_typechecker" }
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"