[package]
name = "seen_ir"
version = "0.1.0"
edition = "2021"
authors = ["Seen Language Team"]
description = "Intermediate representation and code generation for the Seen language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seenlang/seenlang"

[dependencies]
seen_common = { path = "../seen_common" }
seen_parser = { path = "../seen_parser" }
seen_typechecker = { path = "../seen_typechecker" }
# LLVM dependencies will be added in Step 6 (Basic Code Generation)
# llvm-sys = { workspace = true }
# inkwell = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
seen_lexer = { path = "../seen_lexer" }

[[bench]]
name = "codegen_performance"
harness = false

[[bench]]
name = "llvm_ir_quality"
harness = false

[[bench]]
name = "riscv_performance"
harness = false