[package]
name = "seen_typechecker"
version = "0.1.0"
edition = "2021"
authors = ["Seen Language Team"]
description = "Type system and inference engine for the Seen language (<100μs per function)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seenlang/seenlang"

[dependencies]
seen_common = { path = "../seen_common" }
seen_lexer = { path = "../seen_lexer" }
seen_parser = { path = "../seen_parser" }
smallvec = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }

[[bench]]
name = "generic_resolution_benchmark"
harness = false