[package]
name = "seen_oop"
version = "0.1.0"
edition = "2021"
description = "Object-oriented programming features for Seen"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
seen_parser = { path = "../seen_parser" }
seen_lexer = { path = "../seen_lexer" }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }